# Audio2Text

./: .gitattributes  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/audio2text/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: whisper-decoder-language-hybrid.tflite  whisper-decoder_language.tflite  whisper-encoder-hybrid.tflite  whisper-encoder.tflite  whisper-medium.tflite
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  whisper-medium.tflite  whisper.h
app/src/main/java/com/example/audio2text/: JNIProgressCallback.kt  MainActivity.kt  MyApplication.kt  TranscriptionWorker.kt
app/src/main/res/drawable-anydpi/: notification_icon.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/audio2text/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
